objects/NGCC_CR_Credentials__c.object
<CustomObject>
    <fields>
        <fullName>CR_PROD_URL__c</fullName>
        <description>CR Prod URL used for communicating with the CR service</description>
        <label>CR PROD URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CR_STG_URL__c</fullName>
        <description>CR Stage URL used for communicating with the CR service</description>
        <label>CR STG URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CR_URL__c</fullName>
        <description>URL used for communicating with the CR service</description>
        <label>CR URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Password for generic user</description>
        <label>Password</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>generic username</description>
        <label>Username</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Cisco generic user credentials used for connecting to the CR address validation service</description>
    <label>NGCC CR Credentials</label>
</CustomObject>